--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -74,7 +74,63 @@
                     <view key="view" contentMode="scaleToFill" id="hct-8T-3vy">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Wff-no-eRG">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="oTD-ij-9wr">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="0.0"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4mA-sA-U1d">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="0.0"/>
+                                                <state key="normal" title="Button"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dr0-VY-RXX">
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="0.0"/>
+                                                <state key="normal" title="Button"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="17m-8C-fzP">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mdH-a3-Xmq">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="603"/>
+                                                <state key="normal" title="Button"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2lb-K4-rbY">
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="603"/>
+                                                <state key="normal" title="Button"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="9jt-K9-Qog">
+                                        <rect key="frame" x="0.0" y="603" width="375" height="0.0"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nn0-pA-axd">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="0.0"/>
+                                                <state key="normal" title="Button"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xfr-mz-y6L">
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="0.0"/>
+                                                <state key="normal" title="Button"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="17m-8C-fzP" firstAttribute="bottom" secondItem="9jt-K9-Qog" secondAttribute="bottom" id="C28-QD-ktK"/>
+                                    <constraint firstItem="oTD-ij-9wr" firstAttribute="top" secondItem="17m-8C-fzP" secondAttribute="top" id="ree-nR-FIW"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Wff-no-eRG" firstAttribute="top" secondItem="SSq-VU-VLR" secondAttribute="top" id="RYu-vE-c13"/>
+                            <constraint firstItem="Wff-no-eRG" firstAttribute="leading" secondItem="SSq-VU-VLR" secondAttribute="leading" id="XaN-W8-pJI"/>
+                            <constraint firstItem="SSq-VU-VLR" firstAttribute="trailing" secondItem="Wff-no-eRG" secondAttribute="trailing" id="qiY-YO-bSB"/>
+                            <constraint firstItem="SSq-VU-VLR" firstAttribute="bottom" secondItem="Wff-no-eRG" secondAttribute="bottom" id="sBg-La-Vsm"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="SSq-VU-VLR"/>
                     </view>
                 </viewController>
