--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -76,65 +76,66 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Wff-no-eRG">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="16" y="64" width="343" height="519"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="oTD-ij-9wr">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="0.0"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="oTD-ij-9wr">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="459"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4mA-sA-U1d">
-                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="0.0"/>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4mA-sA-U1d">
+                                                <rect key="frame" x="0.0" y="0.0" width="171.5" height="459"/>
                                                 <state key="normal" title="Button"/>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dr0-VY-RXX">
-                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="0.0"/>
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dr0-VY-RXX">
+                                                <rect key="frame" x="171.5" y="0.0" width="171.5" height="459"/>
                                                 <state key="normal" title="Button"/>
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="17m-8C-fzP">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="17m-8C-fzP">
+                                        <rect key="frame" x="0.0" y="459" width="343" height="30"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mdH-a3-Xmq">
-                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="603"/>
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mdH-a3-Xmq">
+                                                <rect key="frame" x="0.0" y="0.0" width="171.5" height="30"/>
                                                 <state key="normal" title="Button"/>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2lb-K4-rbY">
-                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="603"/>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2lb-K4-rbY">
+                                                <rect key="frame" x="171.5" y="0.0" width="171.5" height="30"/>
                                                 <state key="normal" title="Button"/>
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="9jt-K9-Qog">
-                                        <rect key="frame" x="0.0" y="603" width="375" height="0.0"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="9jt-K9-Qog">
+                                        <rect key="frame" x="0.0" y="489" width="343" height="30"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nn0-pA-axd">
-                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="0.0"/>
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nn0-pA-axd">
+                                                <rect key="frame" x="0.0" y="0.0" width="171.5" height="30"/>
                                                 <state key="normal" title="Button"/>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xfr-mz-y6L">
-                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="0.0"/>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xfr-mz-y6L">
+                                                <rect key="frame" x="171.5" y="0.0" width="171.5" height="30"/>
                                                 <state key="normal" title="Button"/>
                                             </button>
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="17m-8C-fzP" firstAttribute="bottom" secondItem="9jt-K9-Qog" secondAttribute="bottom" id="C28-QD-ktK"/>
-                                    <constraint firstItem="oTD-ij-9wr" firstAttribute="top" secondItem="17m-8C-fzP" secondAttribute="top" id="ree-nR-FIW"/>
-                                </constraints>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gPQ-gt-l6x">
-                                <rect key="frame" x="164" y="318" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gPQ-gt-l6x">
+                                <rect key="frame" x="157" y="591" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="Aop-Px-hWv"/>
+                                    <constraint firstAttribute="width" constant="60" id="k72-8w-rGL"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Wff-no-eRG" firstAttribute="top" secondItem="SSq-VU-VLR" secondAttribute="top" id="RYu-vE-c13"/>
-                            <constraint firstItem="Wff-no-eRG" firstAttribute="leading" secondItem="SSq-VU-VLR" secondAttribute="leading" id="XaN-W8-pJI"/>
-                            <constraint firstItem="SSq-VU-VLR" firstAttribute="trailing" secondItem="Wff-no-eRG" secondAttribute="trailing" id="qiY-YO-bSB"/>
-                            <constraint firstItem="SSq-VU-VLR" firstAttribute="bottom" secondItem="Wff-no-eRG" secondAttribute="bottom" id="sBg-La-Vsm"/>
+                            <constraint firstItem="Wff-no-eRG" firstAttribute="leading" secondItem="SSq-VU-VLR" secondAttribute="leading" constant="16" id="XaN-W8-pJI"/>
+                            <constraint firstItem="gPQ-gt-l6x" firstAttribute="top" secondItem="Wff-no-eRG" secondAttribute="bottom" constant="8" id="k6i-0I-cVl"/>
+                            <constraint firstItem="gPQ-gt-l6x" firstAttribute="centerX" secondItem="SSq-VU-VLR" secondAttribute="centerX" id="qLm-ZG-sVZ"/>
+                            <constraint firstItem="SSq-VU-VLR" firstAttribute="trailing" secondItem="Wff-no-eRG" secondAttribute="trailing" constant="16" id="qiY-YO-bSB"/>
+                            <constraint firstItem="SSq-VU-VLR" firstAttribute="bottom" secondItem="gPQ-gt-l6x" secondAttribute="bottom" constant="16" id="sBg-La-Vsm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SSq-VU-VLR"/>
                     </view>
